@startuml diagramme-classes-extensions
top to bottom direction
scale 2 width
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam nodesep 100
skinparam ranksep 110
skinparam linetype polyline
skinparam defaultFontSize 13
skinparam ArrowFontSize 11
skinparam Padding 16

title Diagramme de classes — extensions métier et traçabilité

class BillProvider {
  - code : String
  - name : String
}

class BillPayment {
  - clientReference : String
  - amount : BigDecimal
}

class CheckbookOrder {
  - orderNumber : String
  - status : CheckbookOrderStatus
  - sheetCount : CheckbookSheetCount
}

class Notification {
  - type : NotificationType
  - title : String
  - read : boolean
}

class AuditLog {
  - action : String
  - entityType : String
  - performedAt : Instant
}

class "<<entité liée>>\nAccount" as AccountRef
class "<<entité liée>>\nClient" as ClientRef
class "<<entité liée>>\nUser" as UserRef
class "<<entité liée>>\nTransaction" as TransactionRef

BillProvider -[hidden]right- BillPayment
BillPayment -[hidden]right- CheckbookOrder
CheckbookOrder -[hidden]right- Notification
Notification -[hidden]right- AuditLog

BillProvider -[hidden]down- AccountRef
BillPayment -[hidden]down- TransactionRef
CheckbookOrder -[hidden]down- ClientRef
Notification -[hidden]down- UserRef

AccountRef "1" o-- "0..*" BillPayment : paie via
BillProvider "1" o-- "0..*" BillPayment
BillPayment "1" --> "1" TransactionRef : génère

ClientRef "1" o-- "0..*" CheckbookOrder : demande
AccountRef "1" o-- "0..*" CheckbookOrder : commande
UserRef "1" o-- "0..*" CheckbookOrder : traite

ClientRef "1" o-- "0..*" Notification : reçoit
UserRef "1" o-- "0..*" Notification : reçoit

UserRef "1" o-- "0..*" AuditLog : effectue

note bottom of CheckbookOrder
  **R12–R14** : une seule commande PENDING
  par compte ; pas d'impact sur le solde.
end note

@enduml
